infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "PatientManagementCluster98E10F8D": {
   "Type": "AWS::ECS::Cluster"
  },
  "PatientManagementClusterVpcFBD82F39": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc"
     }
    ]
   }
  },
  "PatientManagementClusterVpcPublicSubnet1Subnet29769526": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterVpcPublicSubnet1RouteTable6DE90335": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterVpcPublicSubnet1RouteTableAssociation28306409": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet1RouteTable6DE90335"
    },
    "SubnetId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet1Subnet29769526"
    }
   }
  },
  "PatientManagementClusterVpcPublicSubnet1DefaultRoute79AB3ED4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementClusterVpcIGWB47FA9AD"
    },
    "RouteTableId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet1RouteTable6DE90335"
    }
   },
   "DependsOn": [
    "PatientManagementClusterVpcVPCGWB777FC31"
   ]
  },
  "PatientManagementClusterVpcPublicSubnet1EIP10C77175": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PublicSubnet1"
     }
    ]
   }
  },
  "PatientManagementClusterVpcPublicSubnet1NATGatewayE20A915B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementClusterVpcPublicSubnet1EIP10C77175",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet1Subnet29769526"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementClusterVpcPublicSubnet1DefaultRoute79AB3ED4",
    "PatientManagementClusterVpcPublicSubnet1RouteTableAssociation28306409"
   ]
  },
  "PatientManagementClusterVpcPublicSubnet2Subnet5D0179F5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterVpcPublicSubnet2RouteTable6348C4DC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterVpcPublicSubnet2RouteTableAssociationD792C426": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet2RouteTable6348C4DC"
    },
    "SubnetId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet2Subnet5D0179F5"
    }
   }
  },
  "PatientManagementClusterVpcPublicSubnet2DefaultRouteA7D5E73C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementClusterVpcIGWB47FA9AD"
    },
    "RouteTableId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet2RouteTable6348C4DC"
    }
   },
   "DependsOn": [
    "PatientManagementClusterVpcVPCGWB777FC31"
   ]
  },
  "PatientManagementClusterVpcPublicSubnet2EIPFD8BE4A5": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PublicSubnet2"
     }
    ]
   }
  },
  "PatientManagementClusterVpcPublicSubnet2NATGateway59107040": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementClusterVpcPublicSubnet2EIPFD8BE4A5",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet2Subnet5D0179F5"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementClusterVpcPublicSubnet2DefaultRouteA7D5E73C",
    "PatientManagementClusterVpcPublicSubnet2RouteTableAssociationD792C426"
   ]
  },
  "PatientManagementClusterVpcPrivateSubnet1Subnet1A2157BC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterVpcPrivateSubnet1RouteTableD4AC80D8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterVpcPrivateSubnet1RouteTableAssociationC44EBBFD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementClusterVpcPrivateSubnet1RouteTableD4AC80D8"
    },
    "SubnetId": {
     "Ref": "PatientManagementClusterVpcPrivateSubnet1Subnet1A2157BC"
    }
   }
  },
  "PatientManagementClusterVpcPrivateSubnet1DefaultRouteBCF76CA9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet1NATGatewayE20A915B"
    },
    "RouteTableId": {
     "Ref": "PatientManagementClusterVpcPrivateSubnet1RouteTableD4AC80D8"
    }
   }
  },
  "PatientManagementClusterVpcPrivateSubnet2SubnetC3BDFF3F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterVpcPrivateSubnet2RouteTableD89AFF5C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterVpcPrivateSubnet2RouteTableAssociation74C990BF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementClusterVpcPrivateSubnet2RouteTableD89AFF5C"
    },
    "SubnetId": {
     "Ref": "PatientManagementClusterVpcPrivateSubnet2SubnetC3BDFF3F"
    }
   }
  },
  "PatientManagementClusterVpcPrivateSubnet2DefaultRoute16E5D30B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementClusterVpcPublicSubnet2NATGateway59107040"
    },
    "RouteTableId": {
     "Ref": "PatientManagementClusterVpcPrivateSubnet2RouteTableD89AFF5C"
    }
   }
  },
  "PatientManagementClusterVpcIGWB47FA9AD": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementCluster/Vpc"
     }
    ]
   }
  },
  "PatientManagementClusterVpcVPCGWB777FC31": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientManagementClusterVpcIGWB47FA9AD"
    },
    "VpcId": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementClusterDefaultServiceDiscoveryNamespace72C5F264": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "patient-management.local",
    "Vpc": {
     "Ref": "PatientManagementClusterVpcFBD82F39"
    }
   }
  },
  "PatientManagementVPC522067E7": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVPC"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet1SubnetC8305E9D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E"
    }
   },
   "DependsOn": [
    "PatientManagementVPCVPCGW1FFEFAEB"
   ]
  },
  "PatientManagementVPCPublicSubnet1EIPC113BD7F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet1"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet1NATGatewayB9CF9F92": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVPCPublicSubnet1EIPC113BD7F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB",
    "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4"
   ]
  },
  "PatientManagementVPCPublicSubnet2Subnet07CEC558": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2RouteTable391C4D34": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet2RouteTable391C4D34"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet2RouteTable391C4D34"
    }
   },
   "DependsOn": [
    "PatientManagementVPCVPCGW1FFEFAEB"
   ]
  },
  "PatientManagementVPCPublicSubnet2EIP208E0C4A": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet2"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet2NATGateway28B0784D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVPCPublicSubnet2EIP208E0C4A",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916",
    "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09"
   ]
  },
  "PatientManagementVPCPrivateSubnet1Subnet05B10E79": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1RouteTableAssociationAA604973": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1DefaultRouteC24DADA9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVPCPublicSubnet1NATGatewayB9CF9F92"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2Subnet8A2E409C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2RouteTableAssociationC55EBEF2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2DefaultRoute98121A2D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVPCPublicSubnet2NATGateway28B0784D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6"
    }
   }
  },
  "PatientManagementVPCIGWA0746919": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVPC"
     }
    ]
   }
  },
  "PatientManagementVPCVPCGW1FFEFAEB": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
     },
     {
      "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSubnetGroupCED49D16": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PatientServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
     },
     {
      "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
     }
    ]
   }
  },
  "PatientServiceDBSecurityGroup6B97C0E5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PatientServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSecretAttachment90D77B03": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PatientServiceDBB84F9BF9"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PatientServiceDBB84F9BF9": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "patient-service-db",
    "DBSubnetGroupName": {
     "Ref": "PatientServiceDBSubnetGroupCED49D16"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PatientServiceDBSecurityGroup6B97C0E5",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "PatientServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
      },
      {
       "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.0",
    "NumberOfBrokerNodes": 1
   }
  }
 }
}
